\newcommand{\ghit}{\href{https://github.com/KevCaz/graphicsutils/issues/#1}{##1}}


\section{Changes in graphicsutils version 1.1-2 (Unreleased)}{
  \itemize{
    \item Addition of R functions:
    \itemize{
      \item \code{howManyRC()} compute the number of rows and columns to split a graphic window into panels as equally as possible.
    }
    \item Changes in existing R functions:
    \itemize{
      \item \code{showPalette()} now displays the first colors of the palette properly.
      \item \code{showPalette()} shows the colors from palette() by default.
      \item \code{showPalette()} now adds only one line when displaying the hex color code and tune the color according to the background.
      \item Must of functions that creates new plots now ends by \code{invisible(NULL)}.
      \item \code{graphicsutils.R} has been renamed \code{zzz.R} and introduce a
      startup message including the version of the package.
      \item \code{pickColors()} has been reviewed to adress \ghit{3}.
      \item \code{plot0()} properly handle matrix of coordinates.
      \item New argunent \code{text} in \code{plot0()} to add centered text in the plot region.
    }
    \item Changes in the package structure:
    \itemize{
      \item a new dataset has been added: \code{gpu} that includes a list of color palettes.
      \item Code coverage (from 3\% to 12\%sudo).
      \item \code{pickcolors.R} has been renamed \code{pickColors.R}.
    }
  }
}


\section{Changes in graphicsutils version 1.1-1 (Unreleased)}{
  \itemize{
    \item Addition of R functions:
    \itemize{
      \item New R functions \code{toFig()} and \code{toFig()} that allow conversion from figure
      region coordinates to the user coordinates and conversely.
      \item New R function encircle that encirle points.
      \item New R function \code{box2()}, a flexible version of \code{box()}.
      \item New R functions \code{ramp()}, \code{darken()}, \code{lighten()} to ease the creation of color shades.