@@ -12,8 +12,6 @@ export(encircle)
 export(envelop)
 export(frameit)
 export(getAngle2d)
-export(getIcon)
-export(getIconNames)
 export(homothety)
 export(howManyRC)
 export(image2)
