@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/stackedareas.R
+% Please edit documentation in R/stackedAreas.R
 \name{stackedAreas}
 \alias{stackedAreas}
 \title{Stacked areas chart.}
